# old_stuff

./: README.md
AliceFalloutServer/: README.md
decicsion_theory/: CMakeLists.txt  README.md
decicsion_theory/include/: hurwitz.h  minimax.h  savage.h
decicsion_theory/src/: main.cpp  mercedes.cpp  two_years.cpp
dss_exam/: README.md
euroradio_diploma/: .gitignore  .gitmodules  CMakeLists.txt  README.md
euroradio_diploma/cfg/: README.md  euroradio.ini
euroradio_diploma/doc/: README.md
euroradio_diploma/scripts/: README.md
euroradio_diploma/src/: README.md  src.cmake
euroradio_diploma/src/lib_ale/: README.md  lib_ale.cmake
euroradio_diploma/src/lib_ale/ale/: README.md  ale.cmake  ale.cpp  ale.h  ale_error_handler.h
euroradio_diploma/src/lib_ale/ale_controller/: README.md  ale_controller.cmake  ale_controller.cpp  ale_controller.h
euroradio_diploma/src/lib_ale/alepkt/: README.md  alepkt.cmake  alepkt.h  alepkt_builder.h  alepkt_parser.cpp  alepkt_parser.h
euroradio_diploma/src/lib_ale/basic_ale/: README.md  basic_ale.cmake  basic_ale.cpp  basic_ale.h
euroradio_diploma/src/lib_ale/sockets/: README.md  socket_pair.cpp  socket_pair.h  sockets.cmake  tcp_socket.cpp  tcp_socket.h
euroradio_diploma/src/lib_sl/: README.md  lib_sl.cmake
euroradio_diploma/src/lib_sl/crypt/: README.md  crypt.cmake  crypt.h  des.h
euroradio_diploma/src/lib_sl/sa_pdu/: sa_pdu.cmake  sa_pdu.h  sa_pdu_builder.h  sa_pdu_parser.cpp  sa_pdu_parser.h
euroradio_diploma/src/lib_sl/sl/: sl.cmake  sl.cpp  sl.h  sl_error_handler.h  sl_utils.cpp  sl_utils.h
euroradio_diploma/src/lib_subset_026/: README.md  subset.cmake
euroradio_diploma/src/lib_subset_026/binary_message/: README.md  binary_message.cmake  binary_message.cpp  binary_message.h
euroradio_diploma/src/lib_subset_026/channel_state/: README.md  channel_state.cmake  channel_state.cpp  channel_state.h
euroradio_diploma/src/lib_subset_026/connection_table/: connection_parameters.cpp  connection_table.cmake  connection_table.cpp  connection_table.h  pending_cs_init.cpp  pending_cs_init.h  watchdog_timers.cpp
euroradio_diploma/src/lib_subset_026/interfaces/: interfaces.cmake  mediator_interface.cpp  mediator_interface.h  subset_interface.h
euroradio_diploma/src/lib_subset_026/lag_controller/: README.md  lag_controller.cmake  lag_controller.cpp  lag_controller.h
euroradio_diploma/src/lib_subset_026/messages/: README.md  constants.h  messages.cmake  messages.h  packages.h
euroradio_diploma/src/lib_subset_026/parsers/: README.md  parsers.cmake
euroradio_diploma/src/lib_subset_026/parsers/to_bin/: to_bin.cmake  to_bin.cpp  to_bin.h
euroradio_diploma/src/lib_subset_026/parsers/to_dto/: README.md  to_dto.cmake  to_dto.cpp  to_dto.h
euroradio_diploma/src/lib_subset_026/subset_026/: subset_026.cmake  subset_026.cpp  subset_026.h
euroradio_diploma/tests/: README.md
java_sem_6/: README.md
stc_test/: README.md  database.cpp  database.h  editdialog.cpp  editdialog.h  editdialog.ui  importdialog.ui  importwindow.cpp  importwindow.h  importwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  querythread.cpp  querythread.h  stc_test.pro  tablemodel.cpp  (+6 more)
stl_labs/: CMakeLists.txt  README.md
stl_labs/stl_01/: functions.cpp  stl_sort.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  text.txt
stl_labs/stl_02/: functions.cpp  main.cpp
stl_labs/stl_03/: main.cpp  queuewithpriority.cpp  queuewithpriority.h
stl_labs/stl_04/: Contact.cpp  Contact.h  Contacts.cpp  Contacts.h  main.cpp
stl_labs/stl_05/: main.cpp
stl_labs/stl_06/: draw.cpp  input.txt  text.cpp
stl_labs/stl_07/: main.cpp
stl_labs/stl_08/: pi.cpp  shape.cpp
(+21 files in other folders)
